deploy/kubernetes/production/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: configra-api
spec:
  ports:
    - name: metrics
      port: 9090
      targetPort: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: configra-management
spec:
  ports:
    - name: metrics
      port: 9090
      targetPort: metrics
